<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@c0252drawable/var_custom_screen_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@c0253id/linear_layout_skyplot" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="40dp" android:layout_above="@c0253id/linear_layout_bottom"/>
    <LinearLayout android:id="@c0253id/linear_layout_top_coordinates" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:id="@c0253id/text_view_latitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue"/>
        <TextView android:gravity="center_horizontal" android:id="@c0253id/text_view_provider" android:layout_width="wrap_content" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="right" android:id="@c0253id/text_view_longitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue"/>
    </LinearLayout>
    <LinearLayout android:paddingLeft="3dp" android:paddingRight="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@c0253id/linear_layout_top_coordinates">
        <TextView android:gravity="left" android:layout_width="wrap_content" android:text="@string/latitude" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:text="@string/provider" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="right" android:layout_width="wrap_content" android:text="@string/longitude" style="@style/CustomScreenTextTitle"/>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linear_layout_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@c0253id/linear_layout_bottom_2">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/altitude" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_altitude" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/speed" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_speed" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/accuracy" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_accuracy" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linear_layout_bottom_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@c0253id/linear_layout_bottom_3">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/satellites" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_satellites" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/declination" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_declination" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/gps_fix" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_time_gps" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linear_layout_bottom_3" android:background="@c0252drawable/var_panel_bottom" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ToggleButton android:id="@c0253id/btn_gps_on_off" android:layout_width="0dp" android:layout_height="wrap_content" android:textOn="@string/gps_on" android:textOff="@string/gps_off" android:layout_weight="1"/>
        <ToggleButton android:id="@c0253id/btn_compass_on_off" android:layout_width="0dp" android:layout_height="wrap_content" android:textOn="@string/compass" android:textOff="@string/compass" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
