<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_name"/>
        <TextView android:id="@c0253id/infoMapFileViewName" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_size"/>
        <TextView android:id="@c0253id/infoMapFileViewSize" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_version"/>
        <TextView android:id="@c0253id/infoMapFileViewVersion" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_debug"/>
        <TextView android:id="@c0253id/infoMapFileViewDebug" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_date"/>
        <TextView android:id="@c0253id/infoMapFileViewDate" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_area"/>
        <TextView android:id="@c0253id/infoMapFileViewArea" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_start_position"/>
        <TextView android:id="@c0253id/infoMapFileViewStartPosition" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_start_zoom_level"/>
        <TextView android:id="@c0253id/infoMapFileViewStartZoomLevel" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_language_preference"/>
        <TextView android:id="@c0253id/infoMapFileViewLanguagePreference" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_comment"/>
        <TextView android:id="@c0253id/infoMapFileViewComment" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_map_file_created_by"/>
        <TextView android:id="@c0253id/infoMapFileViewCreatedBy" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
