<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@c0253id/linearLayoutMain" android:background="@c0252drawable/var_custom_screen_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@c0253id/linearLayoutCompass" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="40dp" android:layout_above="@c0253id/linearLayoutName"/>
    <LinearLayout android:id="@c0253id/linearLayoutTopCoordinates" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:id="@c0253id/textViewLatitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue"/>
        <TextView android:gravity="center_horizontal" android:id="@c0253id/textViewProvider" android:layout_width="wrap_content" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="right" android:id="@c0253id/textViewLongitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue"/>
    </LinearLayout>
    <LinearLayout android:paddingLeft="3dp" android:paddingRight="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@c0253id/linearLayoutTopCoordinates">
        <TextView android:gravity="left" android:layout_width="wrap_content" android:text="@string/latitude" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:text="@string/provider" style="@style/CustomScreenTextTitle"/>
        <TextView android:gravity="right" android:layout_width="wrap_content" android:text="@string/longitude" style="@style/CustomScreenTextTitle"/>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linearLayoutName" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@c0253id/linear_layout_bottom">
        <TextView android:gravity="center_horizontal" android:id="@c0253id/textViewName" android:layout_width="0dp" android:text="" android:layout_weight="1" style="@style/CustomScreenTextValue"/>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linear_layout_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@c0253id/linear_layout_bottom_2">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/altitude" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/textViewAltitude" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/speed" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/textViewSpeed" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/accuracy" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/textViewAccuracy" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@c0253id/linear_layout_bottom_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/time_to_target" style="@style/CustomScreenTextTitle"/>
            <TextView android:id="@c0253id/text_view_time_to_target" style="@style/CustomScreenTextValue"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
