<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/latitude"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@c0253id/latitude_d" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="3" android:layout_weight="2" android:inputType="none|number|numberSigned|numberDecimal"/>
            <EditText android:id="@c0253id/latitude_m" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="7" android:layout_weight="1" android:inputType="none|number|numberSigned|numberDecimal"/>
        </LinearLayout>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/longitude"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@c0253id/longitude_d" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="3" android:layout_weight="2" android:inputType="none|number|numberSigned|numberDecimal"/>
            <EditText android:id="@c0253id/longitude_m" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="7" android:layout_weight="1" android:inputType="none|number|numberSigned|numberDecimal"/>
        </LinearLayout>
        <TextView android:textStyle="bold" android:textColor="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/zoomLevel"/>
        <SeekBar android:id="@c0253id/zoomLevel" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@c0253id/zoomlevelValue" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
